# guardian-analysis-public

./: .gitignore  LICENSE  README.md  pyproject.toml
blog/: index.html
data/processed/: defensive_rhetoric_sample.parquet  echo_hostile_environment.parquet  echo_invasion.parquet  echo_small_boats.parquet  echo_stop_the_boats.parquet  echo_stop_the_boats_llm.parquet  echo_swamped.parquet  echo_swarm.parquet  stop_the_boats_chart_data.json
prompts/: echo_classification.txt  stance_classification.txt
reports/: defensive_rhetoric_results.md  echo_chart_methodology.md  echo_summary.md  findings.md  tier1_scaling.md
scripts/: __init__.py  acquire_hansard.py  defensive_rhetoric_results.py  echo_analysis.py  generate_blog_chart_data.py  label_defensive_sample_llm.py  lexicon_scoring.py  llm_echo_classify.py  llm_probe.py  paths.py
